# tricount-api

./: .gitignore  API.md  LICENSE  README.md  pyproject.toml  test_transactions.py  tricount_export.py  tricount_standalone.py  tricount_stats.py
src/tricount/: __init__.py  client.py
